Bug 66399 - FORMATTING: LO doesn't format 'Two Lines In One' like MS Word
Summary: FORMATTING: LO doesn't format 'Two Lines In One' like MS Word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-30 14:18 UTC by Adam CloudOn
Modified: 2013-10-11 14:19 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
DOCX containing the 'Two Lines In One' feature (15.96 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-06-30 14:18 UTC, Adam CloudOn
Details
Comparison between Word 2013 [Win8] to LO master [Ubuntu 12.04] (75.96 KB, image/png)
2013-06-30 14:22 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-06-30 14:18:50 UTC
Created attachment 81743 [details]
DOCX containing the 'Two Lines In One' feature

Problem description: 
When loading a DOCX that contains a 'Two Lines In One' feature - LO doesn't render it the same as MS Word.
(See attached comparison image).

Note ! In order to create from scratch a DOCX with a 'Two Lines In One' - you must add it to the toolbar by adding the 'Asian Layout' menu and you must have an Asian language installed (Japanese, Chinese etc).
I simply added the 'Japanese' keyboard.

Steps to reproduce:
1. Load the attached DOCX in LO
2. The 'Two Lines In One' text does not render the same as in Word.

Current behavior:
The 'Two Lines In One' text renders as 'Justified' to both sides.

Expected behavior:
The 'Two Lines In One' text should be rendered like in MS Word (Aligned to the left in both lines).

              
Operating System: All
Version: 4.2.0.0.alpha0+ Master
Comment 1 Adam CloudOn 2013-06-30 14:22:34 UTC
Created attachment 81744 [details]
Comparison between Word 2013 [Win8] to LO master [Ubuntu 12.04]
Comment 2 Jorendc 2013-07-01 09:29:02 UTC
I can confirm this behavior using Mac OSX 10.8.4 with LibreOffice Version: 4.2.0.0.alpha0+ Build ID: 9ab800829b8a0e44824dc11276b54b1870bc5b2b in combination of Word for Mac 2011.

Kind regards,
Joren
Comment 3 Commit Notification 2013-10-11 14:18:14 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=221643376f1bd5bd6be1738c0ea1b62fb646aaca

fdo#66399 - fix rendering of 'two lines in one'



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.