fdo#66399 - fix rendering of 'two lines in one'

Change-Id: I0362714a270af47f1a0bd839f6ecbc257d5e088d
Reviewed-on: https://gerrit.libreoffice.org/6187
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>